--- a/.github/workflows/docker-publish-releasing.yml
+++ b/.github/workflows/docker-publish-releasing.yml
@@ -6,10 +6,10 @@ on:
     branches:
       - master
       - release-*
-    
+
     paths:
       - releasing/VERSION
-  
+
   # Run tests for any PRs.
   pull_request:
 
@@ -17,51 +17,45 @@ env:
   IMAGE_NAME: models-web-app
 
 jobs:
-  # Run tests.
-  test:
-    runs-on: ubuntu-latest
-    
-    steps:
-      - uses: actions/checkout@v2
-      
-      - name: Run tests
-        run: |
-          docker build . --file Dockerfile
-
   # Push image to GitHub Container Registry.
   push:
-    # Ensure test job passes before pushing image.
-    needs: test
-    
     runs-on: ubuntu-latest
+    # Only run on push events, not PRs to the trigger branches/paths
     if: github.event_name == 'push'
     permissions:
       packages: write
       contents: read
-    
+
     steps:
-      - uses: actions/checkout@v2
-      
-      - name: Build image
-        run: |
-          docker build . --file Dockerfile --tag ${IMAGE_NAME}
-      
+      - name: Check out code
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
       - name: Log into GitHub Container Registry
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      
-      - name: Push image
-        run: |
-          IMAGE_ID=ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME
-          
-          # Change all uppercase to lowercase
-          IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
-          VERSION=$(cat ./releasing/VERSION)
-          
-          echo IMAGE_ID=$IMAGE_ID
-          echo VERSION=$VERSION
-          docker tag $IMAGE_NAME $IMAGE_ID:$VERSION
-          docker push $IMAGE_ID:$VERSION
+
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}
+          tags: |
+            # Get version from file for release branches/master
+            type=raw,value={{cat ./releasing/VERSION}}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
