--- a/.github/workflows/oci-release.yml
+++ b/.github/workflows/oci-release.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v4
 
-      - name: Set up Docker Buildx
+      - name: Set up Buildx
         uses: docker/setup-buildx-action@v3
 
       - name: Log into GitHub Container Registry
