--- a/.github/workflows/oci-release.yml
+++ b/.github/workflows/oci-release.yml
@@ -2,7 +2,7 @@ name: Models Web Application OCI Container Publisher
 
 on:
   push:
-    # Publish `master` as Docker `latest` image.
+    # Publish `master` as `latest` OCI image.
     branches:
       - master
       - release-*
@@ -18,7 +18,6 @@ env:
   PLATFORMS: linux/ppc64le,linux/amd64,linux/arm64
 
 jobs:
-  # Run tests.
   test:
     runs-on: ubuntu-latest
 
@@ -29,9 +28,7 @@ jobs:
         run: |
           make docker-build
 
-  # Push image to GitHub Container Registry.
   push:
-    # Ensure test job passes before pushing image.
     needs: test
     runs-on: ubuntu-latest
     # Only run on push events, not PRs
@@ -47,7 +44,7 @@ jobs:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
         with:
-          platforms: ppc64le,arm64
+          platforms: amd64,ppc64le,arm64
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
