--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,12 +38,14 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@kubernetes/client-node": "^0.17.0",
+    "ace-builds": "^1.40.0",
     "date-fns": "^1.29.0",
     "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "material-icons": "^1.10.8",
     "monaco-editor": "^0.33.0",
+    "ngx-ace-wrapper": "^14.0.0",
     "rxjs": "~7.5.6",
     "tslib": "^2.4.0",
     "zone.js": "~0.11.5"
@@ -72,6 +74,7 @@
     "karma-coverage-istanbul-reporter": "~3.0.3",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "^2.0.0",
+    "prettier": "^2.8.8",
     "protractor": "~7.0.0",
     "ts-node": "~10.9.1",
     "typescript": "~4.8.0"
