--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,12 +4,13 @@
   "scripts": {
     "ng": "ng",
     "format": "prettier --write './**/*.{ts,html,css}'",
-    "build": "npm run copyLibAssets && ng build --configuration production --deploy-url static/",
-    "build:fr": "npm run copyLibAssets && ng build --configuration fr --deploy-url static/",
-    "build:watch": "npm run copyLibAssets && ng build --configuration production --watch --deploy-url static/ --output-path ../backend/apps/v1beta1/static/ --output-hashing all",
-    "build:watch:fr": "npm run copyLibAssets && ng build --configuration fr --watch --deploy-url static/ --output-path ../backend/apps/v1beta1/static/ --output-hashing all",
-    "build:watch:ng": "npm run copyLibAssets && ng serve --proxy-config proxy.conf.json",
-    "copyLibAssets": "cp -r ./node_modules/kubeflow/assets/* ./src/assets/",
+    "build": "npm run copyCSS && npm run copyLibAssets && ng build --configuration production --deploy-url static/",
+    "build:fr": "npm run copyCSS && npm run copyLibAssets && ng build --configuration fr --deploy-url static/",
+    "build:watch": "npm run copyCSS && npm run copyLibAssets && ng build --configuration production --watch --deploy-url static/ --output-path ../backend/apps/v1beta1/static/ --output-hashing all",
+    "build:watch:fr": "npm run copyCSS && npm run copyLibAssets && ng build --configuration fr --watch --deploy-url static/ --output-path ../backend/apps/v1beta1/static/ --output-hashing all",
+    "build:watch:ng": "npm run copyCSS && npm run copyLibAssets && ng serve --proxy-config proxy.conf.json",
+    "copyCSS": "mkdir -p ./src/styles/ && cp -r ./node_modules/kubeflow/styles/* ./src/styles/",
+    "copyLibAssets": "mkdir -p ./src/assets/ && cp -r ./node_modules/kubeflow/assets/* ./src/assets/",
     "format:check": "prettier --check 'src/**/*.{js,ts,html,scss,css}' || node scripts/check-format-error.js",
     "format:write": "prettier --write 'src/**/*.{js,ts,html,scss,css}'",
     "i18n:extract": "ng extract-i18n --output-path i18n",
