--- a/.github/workflows/stale.yaml
+++ b/.github/workflows/stale.yaml
@@ -8,6 +8,7 @@ name: Mark stale issues and pull requests
 on:
   schedule:
   - cron: '0 0 * * *' # Run every day at midnight
+  workflow_dispatch:
 
 jobs:
   stale:
