--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,7 +3,7 @@ repos:
     rev: 24.2.0
     hooks:
       - id: black
-        files: ^(common|example)/.*\.py$
+        files: ^backend/.*\.py$
         exclude: .*upstream.*
 
   - repo: https://github.com/adrienverge/yamllint
