--- a/config/overlays/kubeflow/kustomization.yaml
+++ b/config/overlays/kubeflow/kustomization.yaml
@@ -6,9 +6,6 @@ namespace: kubeflow
 
 # Labels to add to all resources and selectors.
 
-
-
-
 generatorOptions:
   disableNameSuffixHash: true
 
@@ -16,28 +13,31 @@ generatorOptions:
 # variabalize ingress gateway, webhook service name and
 # kserve namespace in webhook configurations
 configMapGenerator:
-- behavior: replace
-  literals:
-  - USERID_HEADER=kubeflow-userid
-  - APP_PREFIX=/kserve-endpoints
-  name: kserve-models-web-app-config
+  - behavior: replace
+    literals:
+      - USERID_HEADER=kubeflow-userid
+      - APP_PREFIX=/kserve-endpoints
+      - GRAFANA_PREFIX=/grafana
+      - GRAFANA_CPU_MEMORY_DB=db/knative-serving-revision-cpu-and-memory-usage
+      - GRAFANA_HTTP_REQUESTS_DB=db/knative-serving-revision-http-requests
+    name: kserve-models-web-app-config
 
 configurations:
-- params.yaml
+  - params.yaml
 resources:
-- ../../base
-- web-app-authorization-policy.yaml
+  - ../../base
+  - web-app-authorization-policy.yaml
 labels:
-- includeSelectors: true
-  pairs:
-    app: kserve
-    app.kubernetes.io/name: kserve
+  - includeSelectors: true
+    pairs:
+      app: kserve
+      app.kubernetes.io/name: kserve
 patches:
-- path: patches/web-app-vsvc.yaml
-  target:
-    group: networking.istio.io
-    kind: VirtualService
-    name: kserve-models-web-app
-    namespace: kserve
-    version: v1beta1
-- path: patches/web-app-sidecar.yaml
+  - path: patches/web-app-vsvc.yaml
+    target:
+      group: networking.istio.io
+      kind: VirtualService
+      name: kserve-models-web-app
+      namespace: kserve
+      version: v1beta1
+  - path: patches/web-app-sidecar.yaml
