--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,22 +1,31 @@
 repos:
-  - repo: https://github.com/psf/black
-    rev: 24.2.0
-    hooks:
-      - id: black
-        files: ^backend/.*\.py$
-        exclude: .*upstream.*
+- repo: https://github.com/psf/black
+  rev: 24.2.0
+  hooks:
+  - id: black
+    files: ^backend/.*\.py$
+    exclude: .*upstream.*
 
-  - repo: https://github.com/adrienverge/yamllint
-    rev: v1.35.1
-    hooks:
-      - id: yamllint
-        files: ^(common|example|hack|tests|\.github)/.*\.ya?ml$
-        exclude: .*upstream.*
-        args: [--config-file=.yamllint.yaml]
+- repo: https://github.com/adrienverge/yamllint
+  rev: v1.35.1
+  hooks:
+  - id: yamllint
+    files: ^(common|example|hack|tests|\.github)/.*\.ya?ml$
+    exclude: .*upstream.*
+    args: [--config-file=.yamllint.yaml]
 
-  - repo: https://github.com/shellcheck-py/shellcheck-py
-    rev: v0.9.0.6
-    hooks:
-      - id: shellcheck
-        files: ^.*\.sh$
-        exclude: (^applications/.*|.*upstream.*)
+- repo: https://github.com/shellcheck-py/shellcheck-py
+  rev: v0.9.0.6
+  hooks:
+  - id: shellcheck
+    files: ^.*\.sh$
+    exclude: (^applications/.*|.*upstream.*)
+
+- repo: local
+  hooks:
+  - id: frontend-format
+    name: Run npm format:write in frontend
+    entry: bash -c "cd frontend && npm run format:write"
+    language: system
+    pass_filenames: false
+    files: ^frontend/src/.*\.(js|ts|html|scss|css)$
