--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -2,17 +2,29 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/app",
-    "types": []
+    "types": [],
+    "baseUrl": "./src",
+    "paths": {
+      "kubeflow": ["types/kubeflow.d.ts"]
+    },
+    "typeRoots": [
+      "src/types",
+      "node_modules/@types"
+    ],
+    "skipLibCheck": true
   },
   "files": [
     "src/main.ts",
     "src/polyfills.ts"
   ],
   "include": [
+    "src/**/*.ts",
     "src/**/*.d.ts"
   ],
   "exclude": [
     "src/test.ts",
-    "src/**/*.spec.ts"
+    "src/**/*.spec.ts",
+    "src/**/*.jest.spec.ts",
+    "e2e/**"
   ]
 }
