--- a/.github/workflows/test-node.yaml
+++ b/.github/workflows/test-node.yaml
@@ -40,8 +40,8 @@ jobs:
         - name: Fetch Kubeflow and Build Common Library
           run: |
             COMMIT=$(cat frontend/COMMIT)
-            cd /tmp && git clone https://github.com/kubeflow/kubeflow.git
-            cd kubeflow
+            cd /tmp && git clone https://github.com/kubeflow/notebooks.git
+            cd notebooks
             git checkout $COMMIT
             cd components/crud-web-apps/common/frontend/kubeflow-common-lib
             npm ci --no-audit
@@ -54,10 +54,10 @@ jobs:
             npm link kubeflow
             # Copy styles from kubeflow source to local styles directory
             mkdir -p ./src/styles/
-            cp -r /tmp/kubeflow/components/crud-web-apps/common/frontend/kubeflow-common-lib/projects/kubeflow/src/styles/* ./src/styles/
+            cp -r /tmp/notebooks/components/crud-web-apps/common/frontend/kubeflow-common-lib/projects/kubeflow/src/styles/* ./src/styles/
             # Also copy to node_modules for the copyCSS script
             mkdir -p ./node_modules/kubeflow/styles/
-            cp -r /tmp/kubeflow/components/crud-web-apps/common/frontend/kubeflow-common-lib/projects/kubeflow/src/styles/* ./node_modules/kubeflow/styles/
+            cp -r /tmp/notebooks/components/crud-web-apps/common/frontend/kubeflow-common-lib/projects/kubeflow/src/styles/* ./node_modules/kubeflow/styles/
         - name: Run Unit Tests
           run: |
             cd frontend
@@ -77,8 +77,8 @@ jobs:
         - name: Fetch Kubeflow and Build Common Library
           run: |
             COMMIT=$(cat frontend/COMMIT)
-            cd /tmp && git clone https://github.com/kubeflow/kubeflow.git
-            cd kubeflow
+            cd /tmp && git clone https://github.com/kubeflow/notebooks.git
+            cd notebooks
             git checkout $COMMIT
             cd components/crud-web-apps/common/frontend/kubeflow-common-lib
             npm ci --no-audit
@@ -91,13 +91,13 @@ jobs:
             npm link kubeflow
             # Copy styles from kubeflow source to local styles directory
             mkdir -p ./src/styles/
-            cp -r /tmp/kubeflow/components/crud-web-apps/common/frontend/kubeflow-common-lib/projects/kubeflow/src/styles/* ./src/styles/
+            cp -r /tmp/notebooks/components/crud-web-apps/common/frontend/kubeflow-common-lib/projects/kubeflow/src/styles/* ./src/styles/
             # Also copy to node_modules for the copyCSS script
             mkdir -p ./node_modules/kubeflow/styles/
-            cp -r /tmp/kubeflow/components/crud-web-apps/common/frontend/kubeflow-common-lib/projects/kubeflow/src/styles/* ./node_modules/kubeflow/styles/
+            cp -r /tmp/notebooks/components/crud-web-apps/common/frontend/kubeflow-common-lib/projects/kubeflow/src/styles/* ./node_modules/kubeflow/styles/
             # Copy assets as well
             mkdir -p ./node_modules/kubeflow/assets/
-            cp -r /tmp/kubeflow/components/crud-web-apps/common/frontend/kubeflow-common-lib/projects/kubeflow/src/assets/* ./node_modules/kubeflow/assets/
+            cp -r /tmp/notebooks/components/crud-web-apps/common/frontend/kubeflow-common-lib/projects/kubeflow/src/assets/* ./node_modules/kubeflow/assets/
         - name: Run E2E Tests
           run: |
             cd frontend
