--- a/.github/workflows/linting_bash_python_yaml_files.yaml
+++ b/.github/workflows/linting_bash_python_yaml_files.yaml
@@ -88,6 +88,7 @@ jobs:
     - name: Run yamllint on changed files
       id: lint
       run: |
+        source myenv/bin/activate
         if grep -q 'No YAML files have changed in this PR.' changed_files_in_PR.txt; then
           echo "No YAML files have changed in this PR."
         else
