Fix header size limits for large JWT tokens with oauth2-proxy
- Add GUNICORN_CMD_ARGS to handle JWT tokens up to 32KB
- Implement JWT middleware for better error handling
- Add configurable thresholds for JWT size warnings and errors
- Update README with Known Issues section
- Add example configuration for large JWT environments

Resolves #155

--- a/config/base/deployment.yaml
+++ b/config/base/deployment.yaml
@@ -21,6 +21,9 @@ spec:
       - image: kserve/models-web-app:latest
         imagePullPolicy: Always
         name: kserve-models-web-app
+        env:
+          - name: GUNICORN_CMD_ARGS
+            value: --limit-request-field_size 32000
         envFrom:
           - configMapRef:
               name: kserve-models-web-app-config
