--- a/manifests/kustomize/base/service.yaml
+++ b/manifests/kustomize/base/service.yaml
@@ -5,10 +5,10 @@ metadata:
   namespace: kserve
 spec:
   ports:
-  - name: http
-    port: 80
-    protocol: TCP
-    targetPort: 5000
+    - name: http
+      port: 80
+      protocol: TCP
+      targetPort: 5000
   selector:
-    app.kubernetes.io/component: kserve-models-web-app
+    app.kubernetes.io/component: models-web-app
   type: ClusterIP
